// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> render matches logged in snapshot 1`] = `
<styled.div>
  <Styled(styled.div)>
    <Styled(Link)
      to="/"
    />
    <styled.div>
      <Styled(WithStyles(Icon))
        onClick={[Function]}
      >
        menu
      </Styled(WithStyles(Icon))>
      <Styled(Menu)
        align="end"
        isOpen={false}
        links={
          Object {
            "createAccount": Object {
              "href": "/sign-up",
              "title": "Create an account",
            },
          }
        }
        onLinkClick={[Function]}
      />
    </styled.div>
  </Styled(styled.div)>
</styled.div>
`;

exports[`<Header /> render matches logged out snapshot 1`] = `
<styled.div>
  <Styled(styled.div)>
    <Styled(Link)
      to="/"
    />
    <styled.div>
      <Styled(WithStyles(Icon))
        onClick={[Function]}
      >
        menu
      </Styled(WithStyles(Icon))>
      <Styled(Menu)
        align="end"
        isOpen={false}
        links={
          Array [
            Object {
              "data-active": false,
              "href": "",
              "onClick": [Function],
              "title": "Create an account",
            },
            Object {
              "data-active": false,
              "href": "",
              "onClick": [Function],
            },
          ]
        }
        onLinkClick={[Function]}
      />
    </styled.div>
  </Styled(styled.div)>
  <Modal
    onBackdropClick={[Function]}
    onClose={[Function]}
    onEscapeKeyDown={[Function]}
    open={false}
  />
</styled.div>
`;
